# learn-rust-closures

./: Cargo.toml  README.md
src/: main.rs
src/lambda/: functions.rs  lambda.rs
