[package]
name = "learn-rust-lambda"
version = "0.1.0"
authors = ["epilif3sotnas"]
edition = "2021"
description = "Tic Tac Toe game in Rust language."
readme = "README.md"
repository = "https://github.com/epilif3sotnas/learn-rust-lambda"
license = "MIT"
license-file = "LICENSE"
keywords = ["learning", "lambda"]
publish = false

[dependencies]
log = "~0"
env_logger = "~0"

[[bin]]
name = "learn-rust-lambda"
path = "src/main.rs"