[package]
name = "learn-rust-closures"
version = "0.1.0"
authors = ["epilif3sotnas"]
edition = "2021"
description = "Learn Rust closures."
readme = "README.md"
repository = "https://github.com/epilif3sotnas/learn-rust-closures"
license = "MIT"
license-file = "LICENSE"
keywords = ["learning", "closures"]
publish = false

[dependencies]
log = "~0"
env_logger = "~0"

[[bin]]
name = "learn-rust-closures"
path = "src/main.rs"